<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora v2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_editText_total">Ingrese el total consumido</string>
    <string name="txt_radio_10percent">10%</string>
    <string name="txt_radio_15percent">15%</string>
    <string name="txt_radio_18percent">18%</string>
    <string name="txt_btn_submit">Calcular</string>
    <string name="title_activity_result">Resultado</string>
    <string name="err_editText_empty">Debe ingresar el total consumido</string>
    <string name="err_option_not_selected">Debe seleccionar alguna de las opciones de propina</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
